[package]
name = "lncli"
version = "0.1.1"
edition = "2021"
description = "An opinionated CLI client for Linear.app"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
mime_guess = "2"
toon-format = "0.4"
